# kuba2k2

./: .gitignore  docker-compose.yml  index.md  settings.json  settings.site.yaml
.github/workflows/: abuild.yml  build-cmake.yml  build-node.yml  build-nsis.yml  build-pio.yml  build-poetry.yml  gh-release.yml  lint-clang.yml  lint-node.yml  lint-python.yml  publish-npm.yml  publish-pio-library.yml  publish-pio-platform.yml  publish-pypi.yml  test-node.yml  test-python.yml  version.yml
collections/: README.md  common.yaml  minipc.md  minipc.yaml  phones.md  phones.yaml  smartphones.md  smartphones.yaml  template.html
mdserver/: Dockerfile  pyproject.toml
mdserver/mdserver/: __init__.py  __main__.py  database.py  globals.py  mdserver.py  renderer.py  util.py
mdserver/mdserver/extensions/: headinglink.py
mdserver/mdserver/models/: __init__.py  page.py  settings.py  theme.py
mdserver/static/: style.css
mdserver/static/themes/: base.html
mdserver/static/themes/bootstrap/: collections.html  default.html  index.html  posts-index.html  posts-single.html  style.css  theme.yaml  tools.html
mdserver/static/themes/bootstrap/base/: base.html  sidebar.html
mdserver/static/themes/bootstrap/macros/: page-boxes.html
mdserver/static/themes/bootstrap/parts/: base-color-switch.html  base-comments.html  base-header.html  sidebar-blog.html
posts/: README.json  README.md
posts/cheap-set-top-boxes/: index.md
posts/github-workflows/: index.md
posts/iptv-reverse-engineering/: disclaimer.md
posts/macos-recovery-the-hard-way/: index.md
tools/: README.md
(+23 files in other folders)
